Prevent tootltip linewrap

--- a/app/assets/stylesheets/modules/widgets/_elements.scss
+++ b/app/assets/stylesheets/modules/widgets/_elements.scss
@@ -83,6 +83,7 @@
   border: 0px;
   border-radius: 8px;
   pointer-events: none;
+  white-space: nowrap;
   transform: translate(-50%,calc(-100% - 10px));
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.4);
 
